# Software-Supply-Chain-HW-1

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  artifact.bundle  artifact.md  bandit-final.txt  bandit-initial.txt  cyclonedx-sbom.json  github_link.txt  main.py  part3-writeup.txt  pylint.final.txt  pylint.initial.txt  pypi_link.txt  pyproject.toml  ruff.initial.txt  software_supply_chain_hw_1-3.0.0-py3-none-any.whl  util.py
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  scorecard.yml
tests/: merkle_proof.py  test_cases.py
