[tool.poetry]
name = "software-supply-chain-hw-1"
version = "3.0.0"
description = "project that tests cosign and the rekor api"
authors = ["dipto718 <ssd410@nyu.edu>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.18.2"
black = "^25.11.0"
ruff = "^0.14.4"
flake8 = "^7.3.0"
pylint = "^4.0.2"
autodocstring = "^0.1.2"
bandit = "^1.8.6"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
jsonschema = "^4.25.1"
requests = "^2.32.5"
cryptography = "^46.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
