[project]
name = "software-supply-chain-hw-1"
version = "3.0.0"
description = "project that tests cosign and the rekor api"
authors = [
    {name = "dipto718",email = "ssd410@nyu.edu"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "autodocstring (>=0.1.2,<0.2.0)",
    "bandit (>=1.9.2,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "cyclonedx-bom (>=7.2.1,<8.0.0)"
]

[tool.poetry]
packages = [{include = "software-supply-chain-hw-1", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
